--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.8.9",
-    "com.unity.feature.2d": "1.0.0",
-    "com.unity.ide.rider": "3.0.16",
-    "com.unity.inputsystem": "1.4.3",
-    "com.unity.render-pipelines.universal": "13.1.8",
-    "com.unity.test-framework": "1.1.33",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.cinemachine": "2.9.7",
+    "com.unity.feature.2d": "2.0.0",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "15.0.6",
+    "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.2",
+    "com.unity.timeline": "1.8.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
